# smn_web_api

./: Cargo.toml
src/: main.rs
src/plugins/: mod.rs
src/plugins/plugin_auth/: mod.rs
src/plugins/plugin_auth/structs/: mod.rs  struct_authdata.rs
src/plugins/plugin_lostpeople/: mod.rs
src/plugins/plugin_ui/: mod.rs
static/: index.html
