[package]
name = "smn_web_api"
version = "0.1.0"
edition = "2021"
description = "A simple web API for the SMN project"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
async-trait = "0.1"

smn_web_core = "=0.1.1